[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "dtoolcore"
description = "Core API for managing (scientific) data"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Tjelvar Olsson", email = "tjelvar.olsson@gmail.com"}
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytz"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme"
]

[project.urls]
Documentation = "https://dtoolcore.readthedocs.io"
Repository = "https://github.com/jic-dtool/dtoolcore"
Changelog = "https://github.com/jic-dtool/dtoolcore/blob/master/CHANGELOG.rst"

[project.entry-points."dtool.storage_brokers"]
DiskStorageBroker = "dtoolcore.storagebroker:DiskStorageBroker"

[tool.flit.module]
name = "dtoolcore"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dtoolcore/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dtoolcore --cov-report=term-missing"

[tool.flake8]
exclude = ["env*", ".tox", ".git", "*.egg", "build", "docs", "venv"]
